--- a/config/database.yml
+++ b/config/database.yml
@@ -12,21 +12,22 @@
 default: &default
   adapter: mysql2
   encoding: utf8mb4
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: Aa@123456
-  socket: /var/run/mysqld/mysqld.sock
+  collation: utf8mb4_unicode_ci
+  pool: "<%= ENV.fetch("RAILS_MAX_THREADS", 5) %>"
+  username: "<%= ENV.fetch("DATABASE_USERNAME", "root") %>"
+  password: "<%= ENV.fetch("DATABASE_PASSWORD", "Aa@123456") %>"
+  host: "<%= ENV.fetch("DATABASE_HOST", "localhost") %>"
 
 development:
   <<: *default
-  database: rails_7_template_development
+  database: "<%= ENV.fetch("DATABASE_NAME", "database_name") %>_development"
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails_7_template_test
+  database: "<%= ENV.fetch("DATABASE_NAME", "database_name") %>_test"
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -50,6 +51,4 @@ test:
 #
 production:
   <<: *default
-  database: rails_7_template_production
-  username: rails_7_template
-  password: <%= ENV["RAILS_7_TEMPLATE_DATABASE_PASSWORD"] %>
+  database: "<%= ENV.fetch("DATABASE_NAME", nil) %>"
