--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,7 @@ default: &default
   username: "<%= ENV.fetch("DATABASE_USERNAME", "root") %>"
   password: "<%= ENV.fetch("DATABASE_PASSWORD", "Aa@123456") %>"
   host: "<%= ENV.fetch("DATABASE_HOST", "localhost") %>"
+  port: <%= ENV.fetch("DATABASE_PORT") { "3306" } %>
 
 development:
   <<: *default
